--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,27 @@
-## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/fos_db?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username = root
-spring.datasource.password =
+server.port = 8080
+server.error.include-stacktrace=never
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.date-format=yyyy-MM-dd'T'HH:mm:ss'Z'
 
+#Hibernate
+spring.datasource.url=jdbc:mysql://localhost:3306/fos_db?zeroDateTimeBehavior=convertToNull&autoReconnect=true&characterEncoding=UTF-8&characterSetResults=UTF-8
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
+spring.datasource.maximumPoolSize = 50
+spring.datasource.minimumIdle = 0
+spring.datasource.idleTimeout=10001
+spring.datasource.maxLifetime=0
+spring.jpa.generate-ddl=true
 
-## Hibernate Properties
-
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
+#JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
-# Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
+#Referral Code
+default.referral.discount.value = 15.00
+incr.referral.discount.value  = 10.00
+max.referral.discount.value = 45.00
