--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,13 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 default.referral.discount.value = 15.00
 incr.referral.discount.value  = 10.00
 max.referral.discount.value = 45.00
+
+# Twillio config
+twilio.account.sid= AC8b0dd2fa2f0314dde270daa3c55c8429
+twilio.auth.token= 6587ee3508c391ec42c75610c8670053
+twilio.sender.number= +14807710551
+
+#Twillio test config
+# twilio.account.sid= AC0f4b42b1600ccfaa1b643e4144ab73ca
+# twilio.auth.token= f74476051ddd6c646daf14918d274c54
+# twilio.sender.number= +14807710551
