--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.host.url = http://127.0.0.1:8081/
 server.port = 8081
 server.error.include-stacktrace=never
 spring.jackson.serialization.write-dates-as-timestamps=false
@@ -28,7 +29,7 @@ max.referral.discount.value = 45.00
 
 # Twillio config
 twilio.account.sid= AC8b0dd2fa2f0314dde270daa3c55c8429
-twilio.auth.token= 6587ee3508c391ec42c75610c8670053
+twilio.auth.token= 3a7bf7d20d53822e3da49a9ac06d8d9d
 twilio.sender.number= +14807710551
 
 #Twillio test config
